[tool.poetry]
name = "regtech-cleanup-api"
version = "0.1.0"
description = "Regtech Cleanup API"
authors = ["jmcguffee <justin.mcguffee@cfpb.gov>"]
readme = "README.md"
packages = [{ include = "regtech_cleanup_api", from = "src" }]


[tool.poetry.dependencies]
python = ">=3.12,<4"
sqlalchemy = "^2.0.31"
regtech-api-commons = {git = "https://github.com/cfpb/regtech-api-commons.git"}
sbl-filing-api = {git = "https://github.com/cfpb/sbl-filing-api.git"}
regtech-user-fi-management = {git = "https://github.com/cfpb/regtech-user-fi-management.git"}
boto3 = "^1.34.149"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14"
pytest-env = "^1.1.5"


[tool.poetry.group.linters.dependencies]
ruff = "0.5.5"
black = "^24.8.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = ["src"]

[tool.coverage.report]
skip_empty = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = [
  "--cov-report=term-missing",
  "--cov-branch",
  "--cov-report=xml",
  "--cov-report=term",
  "--cov=src",
  "-vv",
  "--strict-markers",
  "-rfE",
]
env = [
  "AUTH_CLIENT=regtech-client",
  "AUTH_URL=http://localhost",
  "CERTS_URL=http://localhost",
  "DB_HOST=localhost:5432",
  "DB_NAME=filing",
  "DB_PWD=filing_user",
  "DB_SCHEMA=filing",
  "DB_USER=filing_user",
  "FS_UPLOAD_CONFIG__PROTOCOL=file",
  "FS_UPLOAD_CONFIG__ROOT=../upload",
  "INST_DB_HOST=localhost:5432",
  "INST_DB_NAME=financial_institutions",
  "INST_DB_PWD=fi",
  "INST_DB_SCHEMA=public",
  "INST_DB_USER=fi",
  "JWT_OPTS_VERIFY_AT_HASH=false",
  "JWT_OPTS_VERIFY_AUD=false",
  "JWT_OPTS_VERIFY_ISS=false",
  "KC_ADMIN_CLIENT_ID=admin-cli",
  "KC_ADMIN_CLIENT_SECRET=local_test_only",
  "KC_REALM=regtech",
  "KC_REALM_URL=http://localhost",
  "KC_URL=http://localhost:8880",
  "TOKEN_URL=http://localhost"
]

testpaths = ["tests"]

