[tool.poetry]
name = "regtech-mail-api"
version = "0.1.0"
description = ""
authors = ["CFPB's RegTech Team"]
readme = "README.md"
packages = [
    { include = "regtech_mail_api", from = "src"}
]


[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
email-validator = "^2.1.0.post1"
python-multipart = "^0.0.18"
regtech-api-commons = {git = "https://github.com/cfpb/regtech-api-commons.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"
pytest-env = "^1.1.3"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"


[tool.poetry.group.linters.dependencies]
ruff = "^0.1.15"
black = "^24.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
env = [
  "KC_URL=http://localhost",
  "KC_REALM=",
  "KC_ADMIN_CLIENT_ID=",
  "KC_ADMIN_CLIENT_SECRET=",
  "KC_REALM_URL=http://localhost",
  "AUTH_URL=http://localhost",
  "TOKEN_URL=http://localhost",
  "CERTS_URL=http://localhost",
  "AUTH_CLIENT=",
  "EMAIL_MAILER=mock",
  "FROM_ADDR=test@cfpb.gov",
  "TO=cases@localhost.localdomain",
  "BETA_BODY_TEMPLATE=Congratulations! This email confirms that {{signer_name}} submitted a filing on {{formatted_date}}. The confirmation number for this filing is {{confirmation_id}}.{{line_break}}You filed in beta.",
  "PROD_BODY_TEMPLATE=Congratulations! This email confirms that {{signer_name}} submitted a filing on {{formatted_date}} was successful. The confirmation number for this filing is {{confirmation_id}}.{{line_break}}You filed in PROD."
]
addopts = [
    "--cov-report=term-missing",
    "--cov-branch",
    "--cov-report=xml",
    "--cov-report=term",
    "--cov=regtech_mail_api",
    "-vv",
    "--strict-markers",
    "-rfE",
]

[tool.coverage.run]
relative_files = true
source = ["src/regtech_mail_api"]

[tool.coverage.report]
skip_empty = true
