[project]
name = "regtech-regex"
version = "0.1.0"
description = ""
authors = [
    {name = "CFPB's RegTech Team"}
]
readme = "src/python/README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml~=6.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = ["src/python/regtech_regex"]

[tool.hatch.build.force-include]
"src/validations.yaml" = "regtech_regex/validations.yaml"


[tool.hatch.envs.test]
dependencies = [
    "pytest~=8.0.0",
    "pytest-cov~=5.0.0",
    "pytest-mock~=3.14.0"
]

[tool.hatch.envs.lint]
skip-install = true
dependencies = [
    "ruff~=0.1.15",
    "black~=24.1.1"
]

# NOTE: Keep the poetry build-system commented out for now, this is the only
# way to get this to work with our other poetry projects that depend
# on this python module.  Once we start building and pushing up
# whls/sdists, we can address which build system to use

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = ["src/python"]
testpaths = ["src/python/tests"]
addopts = [
    "--cov-report=term-missing",
    "--cov-branch",
    "--cov-report=xml",
    "--cov-report=term",
    "--cov=regtech_regex",
    "-vv",
    "--strict-markers",
    "-rfE",
]

[tool.coverage.run]
relative_files = true
source = ["src/python/regtech_regex"]

[tool.coverage.report]
skip_empty = true

[tool.poetry]
name = "regtech-regex"
version = "0.1.0"
description = ""
authors = ["CFPB's RegTech Team"]
readme = "README.md"
packages = [
    { include = "validations.yaml", from = "src" },
    { include = "regtech_regex", from = "src/python" }
]

[tool.poetry.dependencies]
python = ">=3.12,<4"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"