[tool.poetry]
name = "sbl-validation-processor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{ include = "sbl_validation_processor", from = "src" }]

[tool.poetry.group.processors.dependencies]
sbl-filing-api = {git = "https://github.com/cfpb/sbl-filing-api.git", branch="lambda_sqs_filer"}
regtech-data-validator = {git = "https://github.com/cfpb/regtech-data-validator.git", branch="parquet_validator"}
greenlet = "^3.1.1"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
pandas = "^2.2.3"
pyarrow = "^18.0.0"

[tool.poetry.group.eks.dependencies]
kubernetes = "^31.0.0"

[tool.poetry.group.local.dependencies]
watchdog = "^6.0.0"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "~1.34.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-env = "^1.1.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"

[tool.poetry.group.linters.dependencies]
black = "^24.10.0"
ruff = "^0.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
env = [
  "ENV=LOCAL"
]
addopts = [
  "--cov-report=term-missing",
  "--cov-branch",
  "--cov-report=xml",
  "--cov-report=term",
  "--cov=src",
  "-vv",
  "--strict-markers",
  "-rfE",
]

[tool.coverage.run]
relative_files = true
source = ["src"]

[tool.coverage.report]
skip_empty = true